fixed dialog box alignment

--- a/src/dialog.css
+++ b/src/dialog.css
@@ -1,7 +1,10 @@
 dialog {
   padding: 20px;
   border-radius: 11px;
-  place-self: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border: none;
   box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.25),
     -5px -5px 10px 5px rgba(0, 0, 0, 0.25);
